--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@react-navigation/native": "^7.1.6",
     "date-fns": "^4.1.0",
     "expo": "~53.0.11",
+    "expo-av": "^15.1.6",
     "expo-constants": "^17.1.6",
     "expo-device": "^7.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "^14.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.5",
+    "expo-notifications": "^0.31.3",
     "expo-router": "~5.1.0",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
@@ -48,6 +50,7 @@
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^30.0.0",
+    "@types/node": "^24.0.3",
     "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
